--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
             <p class="lead">{{post.description}}</p>
             <hr/>
             <figcaption class="blockquote-footer text-end" style="font-size:25px;">{{post.author}} - {{post.date}}</figcaption>
-            <a class="btn btn-lg btn-primary" href="/docs/5.0/components/navbar/" role="button">Lasīt vairāk &raquo;</a>
+            <a class="btn btn-lg btn-primary" href="{{post.get_absolute_url}}" role="button">Lasīt vairāk &raquo;</a>
         </div>
     </div>
 <br/>
