Add news post form

--- a/templates/base.html
+++ b/templates/base.html
@@ -17,7 +17,7 @@
                 <a href="{% url 'news_list:homepage' %}" class="nav-link link-dark display-4">Ziņu portāls</a>
                 <ul class="nav align-items-center ms-auto me-auto">
                     <li><a href="#" class="nav-link link-dark pt-4"><h2>Visi raksti</h2></a></li>
-                    <li><a href="#" class="nav-link link-dark pt-4"><h2>Pievienot rakstu</h2></a></li>
+                    <li><a href="{% url 'news_list:new_post' %}" class="nav-link link-dark pt-4"><h2>Pievienot rakstu</h2></a></li>
                 </ul>
                 <form class="pt-4">
                     <ul class="nav align-items-center">
