--- a/templates/add_post.html
+++ b/templates/add_post.html
@@ -2,38 +2,46 @@
 {% block content %}
 <form method="post" enctype="multipart/form-data">
     {% csrf_token %}
-    {{form.as_p}}
-    {% comment %} {{form.non_field_errors}}
-    <div>
-        {{form.title.errors}}
-        <label for="{{form.title.id_for_label}}">Nosaukums:</label>
-        {{form.title}}
+    {% comment %} {{form.as_p}} {% endcomment %}
+    <div class="container-fluid form-group text-center lead">
+        <h2 id="specials" class="display-4 row justify-content-center m-2" >Pievienot rakstu:</h2>
+        {{form.non_field_errors}}
+        <div class="m-3 col-xl-12">
+            <label for="{{form.title.id_for_label}}" class="mb-3" style="font-size:30px;">Nosaukums:</label><br>
+            {{form.title}}<br>
+            {% if form.title.errors %}
+                <div class="badge bg-danger pb-2 pt-3 m-2 px-auto">
+                    {{ form.title.errors }}
+                </div>
+            {% endif %}
+        </div>
+        <div class="m-3 col-xl-12">
+            {{form.author.errors}}
+            <label for="{{form.author.id_for_label}}" class="mb-3" style="font-size:30px;">Autors:</label><br>
+            {{form.author}}
+        </div>
+        <div class="m-3 col-xl-12">
+            {{form.thumbnail.errors}}
+            <label for="{{form.thumbnail.id_for_label}}"class="m-3" style="font-size:30px;">Attēls:</label>
+            {{form.thumbnail}}
+        </div>
+        <div class="m-3 col-xl-12">
+            {{form.category.errors}}
+            <label for="{{form.category.id_for_label}}" class="mb-3" style="font-size:30px;">Kategorija:</label>
+            {{form.category}}
+        </div>
+        <div class="m-3 col-xl-12">
+            {{form.description.errors}}
+            <label for="{{form.description.id_for_label}}" class="mb-3" style="font-size:30px;resize:none;">Apraksts:</label><br>
+            {{form.description}}
+        </div>
+        <div class="m-3 col-xl-12">
+            {{form.text.errors}}
+            <label for="{{form.text.id_for_label}}"class="mb-3" style="font-size:30px;resize:none;">Teksts:</label><br>
+            {{form.text}}
+        </div>
+        <button type="submit" class="btn btn-primary m-3 p-2 w-25">Save</button>
     </div>
-        <div>
-        {{form.author.errors}}
-        <label for="{{form.author.id_for_label}}">Autors:</label>
-        {{form.author}}
-    </div>
-    <div>
-        {{form.thumbnail.errors}}
-        <label for="{{form.thumbnail.id_for_label}}">Attēls:</label>
-        {{form.thumbnail}}
-    </div>
-    <div>
-        {{form.category.errors}}
-        <label for="{{form.category.id_for_label}}">Kategorija:</label><br>
-        {{form.category}}
-    </div>
-    <div>
-        {{form.description.errors}}
-        <label for="{{form.description.id_for_label}}">Apraksts:</label><br>
-        {{form.description}}
-    </div>
-    <div>
-        {{form.text.errors}}
-        <label for="{{form.text.id_for_label}}">Teksts:</label><br>
-        {{form.text}}
-    </div> {% endcomment %}
-    <button type="submit">Save</button>
+
 </form>
 {% endblock content %}
